@@ -793,6 +793,7 @@ AC_DO_PORT(ds400, ds400, DS400, [Excludes the DS400 port])
 AC_DO_PORT(pic14, pic14, PIC14, [Excludes the PIC14 port])
 AC_DO_PORT(pic16, pic16, PIC16, [Excludes the PIC16 port])
 AC_DO_PORT(hc08,  hc08,  HC08,  [Excludes the HC08 port])
+AC_DO_PORT(s08,   s08,   S08,  [Excludes the S08 port])
 
 # Unsupported targets
 AC_DO_PORT_ENABLER(avr,   avr,   AVR,   [Includes the AVR port (disabled by default)])
@@ -855,10 +856,11 @@ if test $OPT_DISABLE_DS400 = 0; then
   test $OPT_DISABLE_DEVICE_LIB = 0 && AC_CONFIG_FILES([device/lib/ds400/Makefile])
 fi
 
-if test $OPT_DISABLE_HC08 = 0; then
+if test $OPT_DISABLE_HC08 = 0 || test $OPT_DISABLE_S08 = 0; then
   AC_CONFIG_FILES([src/hc08/Makefile
                    sdas/as6808/Makefile])
-  test $OPT_DISABLE_DEVICE_LIB = 0 && AC_CONFIG_FILES([device/lib/hc08/Makefile])
+  test $OPT_DISABLE_DEVICE_LIB = 0 && AC_CONFIG_FILES([device/lib/hc08/Makefile
+                                                       device/lib/s08/Makefile])
 fi
 
 if test $OPT_DISABLE_MCS51 = 0; then
@@ -965,6 +967,7 @@ sdcc ${VERSION} is now configured for
     ds390               ${enable_ds390_port}
     ds400               ${enable_ds400_port}
     hc08                ${enable_hc08_port}
+    s08                 ${enable_s08_port}
     mcs51               ${enable_mcs51_port}
     pic14               ${enable_pic14_port}
     pic16               ${enable_pic16_port}
