@@ -308,7 +308,7 @@ FBYNAME (labelIsReturnOnly)
     ;
 
   retInst = "ret";
-  if (TARGET_IS_HC08)
+  if (TARGET_HC08_LIKE)
     retInst = "rts";
   if (strcmp(p, retInst) == 0)
     return TRUE;
@@ -363,8 +363,11 @@ FBYNAME (labelIsUncondJump)
 
   if (TARGET_MCS51_LIKE)
     jpInst = "ljmp";
-  if (TARGET_IS_HC08)
-    jpInst = "jmp";
+  if (TARGET_HC08_LIKE)
+    {
+      jpInst = "jmp";
+      jpInst2 = "bra";
+    }
   if (TARGET_Z80_LIKE)
     {
       jpInst = "jp";
