@@ -23,29 +23,30 @@
 #define TARGET_ID_Z180     12
 #define TARGET_ID_R2K      13
 #define TARGET_ID_R3KA     14
+#define TARGET_ID_S08      15
 
 /* Macro to test the target we are compiling for.
    Can only be used after SDCCmain has defined the port
  */
 #define TARGET_IS_MCS51    (port->id == TARGET_ID_MCS51)
-#define TARGET_IS_Z80      (port->id == TARGET_ID_Z80)
-#define TARGET_IS_Z180     (port->id == TARGET_ID_Z180)
-#define TARGET_IS_GBZ80    (port->id == TARGET_ID_GBZ80)
 #define TARGET_IS_AVR      (port->id == TARGET_ID_AVR)
 #define TARGET_IS_DS390    (port->id == TARGET_ID_DS390)
 #define TARGET_IS_DS400    (port->id == TARGET_ID_DS400)
 #define TARGET_IS_PIC14    (port->id == TARGET_ID_PIC14)
 #define TARGET_IS_PIC16    (port->id == TARGET_ID_PIC16)
 #define TARGET_IS_XA51     (port->id == TARGET_ID_XA51)
-#define TARGET_IS_HC08     (port->id == TARGET_ID_HC08)
+#define TARGET_IS_Z80      (port->id == TARGET_ID_Z80)
+#define TARGET_IS_Z180     (port->id == TARGET_ID_Z180)
 #define TARGET_IS_R2K      (port->id == TARGET_ID_R2K)
 #define TARGET_IS_R3KA     (port->id == TARGET_ID_R3KA)
+#define TARGET_IS_GBZ80    (port->id == TARGET_ID_GBZ80)
+#define TARGET_IS_HC08     (port->id == TARGET_ID_HC08)
+#define TARGET_IS_S08      (port->id == TARGET_ID_S08)
 
 #define TARGET_MCS51_LIKE  (TARGET_IS_MCS51 || TARGET_IS_DS390 || TARGET_IS_DS400)
 #define TARGET_Z80_LIKE    (TARGET_IS_Z80 || TARGET_IS_Z180 || TARGET_IS_GBZ80 || TARGET_IS_R2K)
 #define TARGET_IS_RABBIT   (TARGET_IS_R2K || TARGET_IS_R3KA)
-
-#define TARGET_HC08_LIKE   (TARGET_IS_HC08)
+#define TARGET_HC08_LIKE   (TARGET_IS_HC08 || TARGET_IS_S08)
 #define TARGET_PIC_LIKE    (TARGET_IS_PIC14 || TARGET_IS_PIC16)
 /* is using sdas / sdld assembler / linker */
 #define IS_SDASLD          (TARGET_Z80_LIKE || TARGET_MCS51_LIKE || TARGET_HC08_LIKE)
@@ -431,6 +432,9 @@ extern PORT ds400_port;
 #endif
 #if !OPT_DISABLE_HC08
 extern PORT hc08_port;
+#endif
+#if !OPT_DISABLE_S08
+extern PORT s08_port;
 #endif
 
 #endif /* PORT_INCLUDE */
