@@ -1,5 +1,17 @@
 2012-05-18 Philipp Klaus Krause <pkk AT spth.de>
 
+	* configure.in,
+	  src/SDCCicode.c,
+	  src/SDCCsymt.c,
+	  src/SDCCmain.c,
+	  src/port.h,
+	  src/SDCCglue.c,
+	  src/hc08/main.c,
+	  src/SDCCpeeph.c:
+	  Preparations for s08 port.
+
+2012-05-18 Philipp Klaus Krause <pkk AT spth.de>
+
 	* device/include/stdarg.h,
 	  device/include/string.h,
 	  device/include/setjmp.h,
